Fixing an insanely annoying bug in IE7 where output didnt follow the overflow and took over the whole IDE, I guess no one writes tests with IE7 out there in Windmill Land
git-svn-id: http://svn.getwindmill.com/trunk@1058 78c7df6f-8922-0410-bcd3-9426b1ad491b

--- a/windmill/html/css/windmill.css
+++ b/windmill/html/css/windmill.css
@@ -107,21 +107,19 @@ a:hover {
  overflow:auto;
 }
 
-#ide {
-  width:100%;
-  overflow: auto; overflow-y: auto; overflow-x: hidden;
-}
-
 #ideForm {
+  position:relative;
   width:100%;
   overflow: auto; overflow-y: auto; overflow-x: hidden;
 }
 
 #resOut {
+  position:relative;
   width:100%;
   overflow: auto; overflow-y: auto; overflow-x: hidden;
 }
 #perfOut {
+  position:relative;
   width:100%;
   overflow: auto; overflow-y: auto; overflow-x: hidden;
 }
@@ -145,5 +143,5 @@ a:hover {
 
 .tab {
 height:100%;
-overflow: auto; overflow-y: auto; overflow-x: hidden;
+overflow-x: hidden;
 }
